# rush

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  main.rs
src/cli/: init.rs  install.rs  mod.rs
