[package]
name = "no-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rush"
path = "src/main.rs"

[dependencies]
clap = "4.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
jsonwebtoken = "9.3.1"
urlencoding = "2.1.3"
futures = "0.3.31"
indicatif = "0.17.11"
colored = "3.0.0"
log = "0.4.26"
env_logger = "0.11.6"
dotenv = "0.15.0"
thiserror = "2.0.11"
once_cell = "1.20.3"
anyhow = "1.0.96"
aes = "0.8.4"
block-modes = "0.9.1"
block-padding = "0.3.3"
base64 = "0.22.1"
rusb = "0.9.4"
keychain = "0.0.2"
windows = "0.60.0"
redis = "0.29.0"
uuid = { version = "1.14.0", features = ["v4"] }
tempfile = "3.17.1"
aes-gcm = "0.10.3"
rand = "0.9.0"
